# JARVIS

./: .gitignore  2025-02-28_21-18-05.bin.txt  2025-02-28_21-18-05.txt  2025-03-03_19-43-52.txt  CITATION.cff  README.md  cpf.prof  powers.txt  powers1.txt  proj_images_og backup.py  proj_images_og.py  pyproject.toml
.github/: pyproject.toml  ruff.json  ruff_repo_junit.xml
.github/profiler/: copath_avg_powercalc.pstat  figure_gen.pstat  gen_path_powercalc.pstat  generate_averages.pstat  generate_coadd_segmented.pstat  segmented_pathfinder.pstat  visit_powercalc.pstat
.github/workflows/: autobranch-main.yml  autobranch.yml  autocull-main.yml  main.yml  mergequeue-main.yml  mergequeue.yml  newissue.yml  pytest-main.yml  python-publish.yml
LaTeX/: MainReport.tex  README.md  Ref.bib  bibtex_example.bib  jarvis.sty  templatecopy.tex
datasets/: Datasetdates.md  GeneratedBOUNDARY_copath_2025-03-13T20-10-24.txt  Hisaki_SW-combined.csv  README.md  Solar_Wind.txt  hess2011_table1.txt
datasets/HST/custom/: boundarypaths.json  g05,v03_[3,1]gaussian-coadded.fits  v05_coadded_gaussian[3_1].fits  v05_gaussian[3_1]_coadded.fits
datasets/HST/group_05/: jup_16-142-02-24-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-29-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-44-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-46-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-47-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-49-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-56-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-59-22_0100_v03_stis_f25srf2_proj.fits
datasets/HST/v02/: jup_16-138-18-48-16_0100_v02_stis_f25srf2.fits  jup_16-138-18-49-56_0100_v02_stis_f25srf2.fits  jup_16-138-18-51-36_0100_v02_stis_f25srf2.fits  jup_16-138-18-53-16_0100_v02_stis_f25srf2.fits  jup_16-138-18-54-56_0100_v02_stis_f25srf2.fits  jup_16-138-18-56-36_0100_v02_stis_f25srf2.fits  jup_16-138-18-58-16_0100_v02_stis_f25srf2.fits  jup_16-138-18-59-56_0100_v02_stis_f25srf2.fits  jup_16-138-19-01-36_0100_v02_stis_f25srf2.fits  jup_16-138-19-03-16_0100_v02_stis_f25srf2.fits  jup_16-138-19-04-56_0100_v02_stis_f25srf2.fits  jup_16-138-19-06-36_0100_v02_stis_f25srf2.fits  jup_16-138-19-08-16_0100_v02_stis_f25srf2.fits  jup_16-138-19-09-56_0100_v02_stis_f25srf2.fits  jup_16-138-19-11-36_0100_v02_stis_f25srf2.fits  jup_16-138-19-13-16_0100_v02_stis_f25srf2.fits  jup_16-138-19-14-56_0100_v02_stis_f25srf2.fits  jup_16-138-19-16-36_0100_v02_stis_f25srf2.fits  jup_16-138-19-18-16_0100_v02_stis_f25srf2.fits  jup_16-138-19-19-56_0100_v02_stis_f25srf2.fits  jup_16-138-19-21-36_0100_v02_stis_f25srf2.fits  jup_16-138-19-23-16_0100_v02_stis_f25srf2.fits  jup_16-138-19-24-56_0100_v02_stis_f25srf2.fits  jup_16-138-19-26-36_0100_v02_stis_f25srf2.fits  jup_16-138-19-28-16_0100_v02_stis_f25srf2.fits  jup_16-138-19-29-56_0100_v02_stis_f25srf2.fits
datasets/HST/v03-may21-a/: jup_16-142-02-19-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-21-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-22-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-26-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-27-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-31-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-32-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-34-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-37-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-41-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-42-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-52-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-54-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-57-42_0100_v03_stis_f25srf2_proj.fits
datasets/HST/v05/: jup_16-142-02-17-42_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-36-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-39-22_0100_v03_stis_f25srf2_proj.fits  jup_16-142-02-51-02_0100_v03_stis_f25srf2_proj.fits  jup_16-142-03-01-02_0103_v03_stis_f25srf2_proj.fits
datasets/kernels/: jupiter.mk  jupiter.mk.old
datasets/sample-APIS-FITS/: metadata  ref.bib
python/: HST_emission_power_polygon.py  Hisaki+SW_Analysis  Hisaki-Aurora_Power.py  Hisaki-Torus_Intensity.py  Hisaki_Aurora_Power.py  Hisaki_Torus_Intensity.py  Hisaki_Torus_Power.py  Hisaki_test  Io_Activity.py  README.md  const.py  dt.py  fitsastropy.py  generate.py  hgr.py  jupiter.mk  kernelextract.py  main.py  ml.py  moindtest.py  mscr.py  proj_images_og.py  requirements.txt  runstats.py  steps.py  sw_plot.py  test.ipynb  time_conversions.py
python/Power/: HST_emission_power_polygon.py  time_conversions.py
python/jarvis/: __init__.py  const.py  cvis.py  extensions.py  gen.py  generate.py  hisaki_plots.py  kernelextract.py  main.py  planned_structure.MD  plotting.py  polar.py  power.py  proj_images_og.py  reading_mfp.py  runstats.py  scripter.py  stats.py  sw_plot.py  test_transforms.py  time.py  transforms.py  utils.py
python/jarvis/resources/: BOUNDARY_2025-03-12T20-57-53.txt  BOUNDARY_copath_2025-03-13T15-21-39.txt  BOUNDARY_copath_2025-03-18T13-25-23.txt  deprecated.py  jarvis.mplstyle
python/jarvis/resources/.old/: 2025-03-06_17-30-59.txt  2025-03-06_21-14-46.txt  BOUNDARY_2025-03-12T20-54-45.txt  BOUNDARY_copath_2025-03-17T00-52-21.txt  BOUNDARY_copath_2025-03-18T13-13-27.txt  HST_emission_power_polygon.py  deprecated.py  docs.md  powers.txt
python/sample-APIS-FITS/: main.py
python/tests/: test_base.py  test_fits.py  test_misc_utils.py  test_paths.py  test_transforms.py  test_utils.py
